2008-02-02  Per Bothner  <per@bothner.com>

	* emacs.scm (read-dialog): Updat single Scheme sumbol is no longer
	a java.lang.String.
	* Buffer.java (getFileName, setFileName): Update to semi-recent
	use of Path.
	(findFile): Extend to handle arbitrary Paths.
	Fixes bug reported by Yaroslav Kavenchuk <kavenchuk@gmail.com>.

2008-01-16  Per Bothner  <per@bothner.com>

	* EFrame.java (setMenu): Rename to setMenuBar.
	* emacs.scm (set-menubar-dirty-flag): Update accordingly.

2007-02-18  Per Bothner  <per@bothner.com>

	* EKeymap.java (defineKey): Change since strings are now CharSequence.

2007-01-02  Per Bothner  <per@bothner.com>

	* Buffer.java (filename): Rename and change type of field ...
	 (path): ... to Path.
	(getPath, setPath): New methods.
	(getFileName, setFileName): Update to get/set path field.
	(save): Update to use path. 
	* BufferReader.java (<init>): Update to use path.
	* ReplMode.java (<init>): Likewise. 

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Simplify - we use '$JAVA kawa.repl' rather than $KAWA1.

2006-09-06  Per Bothner  <per@bothner.com>

	* BufferReader.java: Remove redundant import 'gnu.jemacs.buffer.*'.

2006-06-16  Per Bothner  <per@bothner.com>

	* BufferLocal.java (make): Fix some bit-rot.

	* BufferLocal.java (set): Fix off-by-one error.

	* EKeymap.java (ignorable): Can ignore metaKey press but not typed.

2005-12-11  Per Bothner  <per@bothner.com>

	* BufferReader.java: Moved from gnu.jemacs.swing.
	Removed a Swing-specific constructor.
	* Makefile.am: Update accordingly.

2005-11-20  Per Bothner  <per@bothner.com>

	* Makefile.am (ALL): New macro, only if ENABLE_JEMACS.
	(list-sources): Remove no-longer-used rule.

2005-11-16  Per Bothner  <per@bothner.com>

	* ReplMode.java (make): Combine two methods.
	This makes it easier to select method at compiletime in editfns.el.

2005-09-25  Per Bothner  <per@bothner.com>

	* emacs.scm (interaction-window): Add parameter type declaration
	to avoid ambiguity warning.
